--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -797,6 +797,7 @@ font-size: 18px;
   font-size: 14px;
   font-weight: 600;
   color: #1e5eff;
+  margin-top: 12px; 
   margin-bottom: 6px;
   display: block;
 }
