--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,7 +253,7 @@ body {
     padding: 140px 0;
     background: 
     linear-gradient(rgba(255,255,255,0.92), rgba(255,255,255,0.92)),
-    url("images/impact-bg.jpg");
+    url("assets/Impact-Background-image.jpg"); 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
