--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,9 +251,7 @@ body {
 
 .institutional-impact {
     padding: 140px 0;
-      background:
-    linear-gradient(rgba(255,255,255,0.92), rgba(255,255,255,0.92)),
-    url("../Impact-Background-image.jpg");
+background-image: url("../Impact-Background-image.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
